some FIXMEs fixed